# WiCS

./: .gitignore  README.md
wlan_esp32/: CMakeLists.txt  Makefile  README.md
wlan_esp32/main/: CMakeLists.txt  Kconfig.projbuild  component.mk  wics_config.c  wics_config.h  wics_dccgen.c  wics_dccgen.h  wics_main.c  wics_qloco.c  wics_qloco.h  wics_station.c  wics_station.h  wics_webui.c  wics_z21.c  wics_z21.h
wlan_esp32/resource/: config.htm  esp32.css  index.htm  upgrade.htm
