idf_component_register(SRCS "wics_main.c"
                            "wics_config.c"
                            "wics_z21.c"
                            "wics_qloco.c"
                            "wics_station.c"
                            "wics_dccgen.c"
                            "wics_webui.c"
                    INCLUDE_DIRS ".")
